--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   firebase_auth:
   cloud_firestore:
   flutter_facebook_auth:
+  sqflite:
+  path:
+  path_provider:
+  shared_preferences:
+  flutter_svg:
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/menu_icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
